Fix for border on mobile browsers

--- a/css/main.css
+++ b/css/main.css
@@ -3013,7 +3013,7 @@
 		}
 
 		.spotlight.top .content {
-			border-bottom-width: 0.35em;
+			/*border-bottom-width: 0.35em;*/
 			top: 0;
 		}
 
